# lau-fluid-dynamics

./: AGENT.md  Cargo.toml  README.md
src/: advection_diffusion.rs  agent_flow.rs  cavity.rs  euler.rs  flow_regime.rs  lattice_boltzmann.rs  lib.rs  navier_stokes.rs  potential.rs  vortex.rs
tests/: integration_tests.rs
